# pisa-iit-soft-hand

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
cpp_files/: AdaptiveSinergy_trasmission.h  (+1 more)
examples/adaptive_example/: CMakeLists.txt  package.xml
examples/adaptive_example/launch/: P1.sh  P2.sh  P3.sh  adaptive.launch  close_hand.sh  move_hand.sh  move_hand_P1.sh  move_hand_P1_up.sh  move_hand_P2.sh  move_hand_P3.sh  my_rviz.rviz  open_hand.sh  spawn_object.launch
examples/adaptive_example/objects/: object.urdf.xacro
examples/adaptive_example/robot/: soft_hand_adaptive.urdf.xacro
examples/adaptive_example/worlds/: simple_environment.world
examples/full_actuated_example/: CMakeLists.txt  package.xml
examples/full_actuated_example/config/: soft_hand_full_control.yaml
examples/full_actuated_example/launch/: full_actuation.launch
examples/interactive_grasping_simulatior/: CMakeLists.txt  README.md  package.xml
examples/interactive_grasping_simulatior/config/: controllers.yaml
examples/interactive_grasping_simulatior/launch/: asus_frames.launch.xml  loadScene.launch  my_rviz.rviz
examples/interactive_grasping_simulatior/src/: interactive_marker_server.cpp
examples/interactive_grasping_simulatior/urdf/: hand.urdf.xacro  object.urdf.xacro
examples/kinematic_synergy_example/: CMakeLists.txt  package.xml
examples/kinematic_synergy_example/config/: controllers.yaml  joint_names.yaml
examples/kinematic_synergy_example/launch/: kinematic_synergy.launch  my_rviz.rviz
examples/kinematic_synergy_example/robot/: soft_hand_kinematic_synergy.urdf.xacro
examples/two_hands_example/: CMakeLists.txt  package.xml
examples/two_hands_example/config/: controllers.yaml  left_hand_names.yaml  right_hand_names.yaml
examples/two_hands_example/launch/: my_rviz.rviz  two_hands.launch
examples/two_hands_example/robot/: two_soft_hands.urdf.xacro
gazebo_ros_soft_hand/: CMakeLists.txt  README.md  adaptive_transmission_plugin.xml  package.xml
gazebo_ros_soft_hand/include/adaptive_transmission/: adaptive_synergy_transmission.h  adaptive_synergy_transmission_loader.h  loader_utils.h
gazebo_ros_soft_hand/include/gazebo_ros_soft_hand/: default_soft_hand_hw_sim.h  gazebo_ros_soft_hand_plugin.h  kinematic_ctrl_soft_hand_hw_sim.h  soft_hand_hw_sim.h
gazebo_ros_soft_hand/src/: adaptive_synergy_transmission_loader.cpp  default_soft_hand_hw_sim.cpp  gazebo_ros_soft_hand_plugin.cpp  kinematic_ctrl_soft_hand_hw_sim.cpp
gazebo_ros_soft_hand/test/: adaptive_synergy_transmission_loader_test.cpp  adaptive_synergy_transmission_test.cpp
gazebo_ros_soft_hand/test/urdf/: adaptive_synergy_transmission_loader_full.urdf  adaptive_synergy_transmission_loader_invalid.urdf  adaptive_synergy_transmission_loader_minimal.urdf
klampt_ros_soft_hand/: CMakeLists.txt  package.xml
soft_hand/: package.xml
soft_hand/gazebo_ros_soft_hand/: CMakeLists.txt  README.md  package.xml  soft_hand_hw_sim_plugins.xml
soft_hand/gazebo_ros_soft_hand/src/: default_soft_hand_hw_sim.cpp  gazebo_ros_disable_link_plugin.cpp  gazebo_ros_mimic_joint_plugin.cpp  gazebo_ros_soft_hand_plugin.cpp  kinematic_ctrl_soft_hand_hw_sim.cpp
soft_hand/grasp_state_publisher/: CMakeLists.txt  package.xml
soft_hand/grasp_state_publisher/config/: softgrasp.yaml  softgrasp_test.yaml
soft_hand/grasp_state_publisher/launch/: graspStatePublisher.launch
soft_hand/grasp_state_publisher/msg/: GraspState.msg
soft_hand/grasp_state_publisher/src/: grasp_state_publisher.cpp  soft_grasp_observer.cpp
soft_hand/soft_hand/: CMakeLists.txt  package.xml
soft_hand/soft_hand_description/: README.md  package.xml
soft_hand/soft_hand_description/launch/: display.launch  gazebo_adaptive.launch  gazebo_full_actuation.launch  my_rviz.rviz
soft_hand/soft_hand_description/meshes/: ati_nano.stl  coman_coupler_left.stl  coman_coupler_right.stl  fingertip.stl  fingertip_collision.stl  flexiforce.stl  half_sphere.dat.1  knuckle.stl  knuckle_collision.stl  little.txt.1  mid.txt.1  outer.stl  palm_hand.stl  palm_left.stl  palm_left_collision.stl  palm_right.stl  palm_right_collision.stl  palmo.stl  phalanx.stl  phalanx_collision.stl  phalanx_distal_out_no_ati.stl  phalanx_prossimal_injection.stl  phalanx_short_injection.stl  phalanx_thumb_injection.stl  pla_final.stl  ring.txt.1  thumb.txt.1  thumb_knuckle_left.stl  thumb_knuckle_left_collision.stl  thumb_knuckle_right.stl  thumb_knuckle_right_collision.stl
soft_hand/soft_hand_description/model/: soft_hand.gazebo.xacro  soft_hand.inertia.xacro  soft_hand.transmission.xacro  soft_hand.urdf.xacro
soft_hand/soft_hand_description/objects/: object.urdf.xacro
soft_hand/soft_hand_description/robot/: hand_in_world.urdf.xacro  soft_hand_adaptive.urdf.xacro  soft_hand_full_actuation.urdf.xacro  soft_hand_kinematic_synergy.urdf.xacro  two_soft_hands.urdf.xacro
soft_hand/soft_hand_ros_control/: CMakeLists.txt  README.md  package.xml
soft_hand/soft_hand_ros_control/config/: soft_hand_adaptive.yaml  soft_hand_full_control.yaml
soft_hand/soft_hand_ros_control/launch/: soft_hand_adaptive.launch  soft_hand_full_control.launch  soft_hand_hw.launch
soft_hand/soft_hand_ros_control/src/: soft_hand_hw.cpp
soft_hand/soft_hand_transmission_interface/: README.md
soft_hand/soft_hand_transmission_interface/src/: adaptive_synergy_transmission_loader.cpp
soft_hand/soft_hand_transmission_interface/test/: adaptive_synergy_transmission_loader_test.cpp
soft_hand_qb_ros_control/: CMakeLists.txt  README.md  package.xml
soft_hand_qb_ros_control/include/soft_hand_ros_control/: definitions.h  soft_hand_qb_hw.h
soft_hand_qb_ros_control/launch/: soft_hand_qb_hw.launch
soft_hand_qb_ros_control/src/: sh_qb_hw_main.cpp  soft_hand_qb_hw.cpp
soft_hand_ros_control/: CMakeLists.txt  iit_hand_hw_plugin.xml  package.xml
soft_hand_ros_control/include/soft_hand_ros_control/: fake_hand_hw.h  iit_hand_hw.h
soft_hand_ros_control/launch/: soft_hand_adaptive.launch  soft_hand_hw.launch
soft_hand_ros_control/src/: fake_hand_hw.cpp  iit_hand_hw.cpp  iit_hand_hw_node.cpp  soft_hand_hw.cpp
(+91 files in other folders)
