<?xml version="1.0"?>
<package>
  <name>klampt_ros_soft_hand</name>
  <version>0.0.0</version>
  <description>The klampt_ros_soft_hand package</description>

  <maintainer email="rocchi.alessio@gmail.com">Alessio Rocchi</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>