<package>
  <name>soft_hand</name>
  <version>0.0.0</version>
  <description>
    ROS meta-package containing soft_hand ROS packages.
  </description>

  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend> soft_hand_description </run_depend>
  <run_depend> soft_hand_controllers </run_depend>
  <run_depend> soft_hand_qb_ros_control </run_depend>

  <export>
    <metapackage/>
  </export>
</package>