<?xml version="1.0"?>
<package>
  <name>soft_hand_ros_control</name>
  <version>0.0.0</version>
  <description>The soft_hand_ros_control package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>combined_robot_hw</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>urdf</build_depend>
  
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>combined_robot_hw</run_depend>
  <run_depend>urdf</run_depend>
  
  <export>
    <hardware_interface plugin="${prefix}/iit_hand_hw_plugin.xml"/>
  </export>
</package>
