<?xml version="1.0"?>
<package>
  <name>interactive_grasping_simulator</name>
  <version>0.0.0</version>
  <description>The interactive_grasping_simulator package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>

  <license>GPLv2</license>

  <!-- Developed under the PaCMan project -->
  <url type="pacman_website">http://www.pacman-project.eu/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>soft_hand</run_depend>

  <export>
  </export>
</package>