<?xml version="1.0"?>
<package>
  <name>kinematic_synergy_example</name>
  <version>0.0.0</version>
  <description>The kinematic_synergy_example package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>