<?xml version="1.0"?>
<package>
  <name>two_hands_example</name>
  <version>0.0.0</version>
  <description>The two_hands_example package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>