<package>
  <name>gazebo_ros_soft_hand</name>
  <version>0.0.1</version>
  <description>gazebo_ros_soft_hand</description>

  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>

  <license>BSD</license>

  <author>Carlos Rosales</author>
  <author>Marco Bartolomei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>control_toolbox</build_depend> 
  <build_depend>controller_manager</build_depend> 
  <build_depend>pluginlib</build_depend> 
  <build_depend>transmission_interface</build_depend> 
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  
  <run_depend>roscpp</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>controller_manager</run_depend> 
  <run_depend>pluginlib</run_depend> 
  <run_depend>transmission_interface</run_depend> 
  <run_depend>urdf</run_depend>

  <export>
    <gazebo_ros_soft_hand plugin="${prefix}/soft_hand_hw_sim_plugins.xml"/>
  </export>
</package>
