<?xml version="1.0"?>
<package>
  <name>grasp_state_publisher</name>
  <version>0.0.0</version>
  <description>The grasp_state_publisher package</description>

  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>
  <maintainer email="santaeragaspare@inwind.it">Gaspare Santaera</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>